--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Sample page
+<html>
+<head>
+	<title>Ferran Maylinch</title>
+
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
+<body>
+
+	Resources:
+
+	<ul>
+		<li><a href="code-cheat-sheet.html">Code cheat sheet</a></li>
+	</ul>
+
+</body>
+</html>
+
