Prepare node modules and add style

--- a/index.html
+++ b/index.html
@@ -1,19 +1,66 @@
-<html>
+<!doctype html>
+<html lang="en">
+
 <head>
 	<title>Ferran Maylinch</title>
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<!-- https://necolas.github.io/normalize.css/ -->
+	<link rel="stylesheet" href="css/normalize.css">
+	<!-- Our (processed) CSS -->
+	<link rel="stylesheet" href="css/generated/main.css">
+
+	<!-- jQuery (not minified) -->
+	<script src="js/jquery-2.2.1.js"></script>
 </head>
+
 <body>
 
-	Resources:
+	<div class="main">
 
-	<ul>
-		<li><a href="code-cheat-sheet.html">Code cheat sheet</a></li>
-	</ul>
+		<nav>
+			Ferran Maylinch
+		</nav>
+
+		<div class="content">
+
+			<section>
+
+				<h3>Info</h3>
+
+				<div class="section-content">
+					<p>
+						I'm a full-stack and mobile developer. You can contact me by <a href="mailto:ferran.maylinch@gmail.com">email</a> or <a href="https://www.linkedin.com/in/ferranmaylinch">LinkedIn</a>.
+					</p>
+				</div>
+
+			</section>
+			
+			<section>
+				
+				<h3>Resources</h3>
+
+				<div class="section-content">
+					<ul>
+
+						<li><a href="https://github.com/fmaylinch/LayoutHelperApp">LayoutHelperApp</a> : App and helper classes to code iOS layouts</li>
+
+						<li>
+							<a href="https://gist.github.com/fmaylinch/4a708abcdb42bf2330e5"> Code cheat sheet</a> : Comparison between some languages
+						</li>
+
+						<li><a href="jess-lessons.html">Jess app lessons</a> : JavaScript tutorials for the Jess app</li>
+
+					</ul>
+				</div>
+
+			</section>
+
+		</div>
+
+	</div>
 
 </body>
 </html>
-
