Add link to Jess lesson

--- a/jess-lessons.html
+++ b/jess-lessons.html
@@ -14,6 +14,10 @@
 
 	<!-- jQuery (not minified) -->
 	<script src="js/jquery-2.2.1.js"></script>
+
+	<!-- Deep link for the Android app -->
+	<link rel="alternate"
+          href="android-app://es.maydev.jess/jessapp/lessons?lessonUrl=https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw" />
 </head>
 
 <body>
@@ -25,7 +29,19 @@
 			<section>
 
 				<p>
-					Work in progress. To be released soon!
+					This is a sample lesson for the Jess app. You can click the link from your mobile phone to open the app (if you have it installed).
+
+					<br><br>
+
+					<a href="jessapp://lessons?lessonUrl=https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw">Open in app</a>
+
+				</p>
+				<p>
+					You can also paste the following link inside the app:
+
+					<div class="code">
+						https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw
+					</div>
 				</p>
 
 			</section>
