Little changes in style and jess page

--- a/jess-lessons.html
+++ b/jess-lessons.html
@@ -24,16 +24,22 @@
 
 	<div class="main">
 
+		<nav>
+			Jess app
+		</nav>
+
 		<div class="content">
 
 			<section>
 
 				<p>
-					This is a sample lesson for the Jess app. You can click the link from your mobile phone to open the app (if you have it installed).
+					For now there's only a sample lesson for the Jess app.
+					You can click the link below from your mobile phone to open it in the app
+					(if you have it installed).
 
 					<br><br>
 
-					<a href="jessapp://lessons?lessonUrl=https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw">Open in app</a>
+					<a href="jessapp://lessons?lessonUrl=https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw">Open sample lesson in app</a>
 
 				</p>
 				<p>
