Info about creating your own tutorials

--- a/jess-lessons.html
+++ b/jess-lessons.html
@@ -49,6 +49,11 @@
 						https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw
 					</div>
 				</p>
+				<p>
+					For JavaScript experts: you can easily create your own tutorials!
+					<br><br>
+					Look at the <a href="https://gist.github.com/fmaylinch/8e49ccad29998c08c733">sample lesson source</a>.
+				</p>
 
 			</section>
 
