Add Jess apk and better instructions

--- a/jess-lessons.html
+++ b/jess-lessons.html
@@ -32,28 +32,51 @@
 
 			<section>
 
-				<p>
-					For now there's only a sample lesson for the Jess app.
-					You can click the link below from your mobile phone to open it in the app
-					(if you have it installed).
+				<h3>Students: how to use it</h3>
 
-					<br><br>
+				<div class="section-content">
 
-					<a href="jessapp://lessons?lessonUrl=https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw">Open sample lesson in app</a>
+					<p>
+						Get the latest <a href="jess/jess-1.1.apk">Jess 1.1</a>.
 
-				</p>
-				<p>
-					You can also paste the following link inside the app:
+						<br><br>
 
-					<div class="code">
-						https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw
-					</div>
-				</p>
-				<p>
-					For JavaScript experts: you can easily create your own tutorials!
-					<br><br>
-					Look at the <a href="https://gist.github.com/fmaylinch/8e49ccad29998c08c733">sample lesson source</a>.
-				</p>
+						After installing the app, click <a href="jessapp://lessons?lessonUrl=https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw">open sample lesson</a> from your mobile phone.
+
+						<br><br>
+
+						At the moment there's only that little sample lesson. I'm working on more content. Stay tuned!
+
+					</p>
+
+				</div>
+
+			</section>
+
+			<section>
+
+				<h3>Teachers: create tutorials</h3>
+
+				<div class="section-content">
+
+					<p>
+						You can easily create your own tutorials using the YAML language!
+
+						<br><br>
+
+						Look at the <a href="https://gist.github.com/fmaylinch/8e49ccad29998c08c733">sample lesson source</a>.
+
+						<br><br>
+
+						You can paste the a link to the YAML file in the app. For example, this is the link to the sample lesson "raw" source:
+
+						<div class="code">
+							https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw
+						</div>
+
+					</p>
+
+				</div>
 
 			</section>
 
