--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<a href="https://gist.github.com/fmaylinch/4a708abcdb42bf2330e5"> Code cheat sheet</a> : Comparison between some languages
 						</li>
 
-						<li><a href="jess-lessons.html">Jess app</a> : JavaScript tutorials on the go!</li>
+						<li><a href="jess.html">Jess app</a> : JavaScript tutorials on the go!</li>
 
 					</ul>
 				</div>
