--- a/jess.html
+++ b/jess.html
@@ -18,6 +18,9 @@
 	<!-- Deep link for the Android app -->
 	<link rel="alternate"
           href="android-app://es.maydev.jess/jessapp/lessons?lessonUrl=https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw" />
+
+    <meta property="og:image" itemprop="image" content="jess/ic_launcher.png"/>
+
 </head>
 
 <body>
@@ -25,7 +28,8 @@
 	<div class="main">
 
 		<nav>
-			Jess app
+			<img src="jess/ic_launcher.png" alt="Jess app">	
+			<span>Jess app</span>
 		</nav>
 
 		<div class="content">
