Change image meta to absolute path

--- a/jess.html
+++ b/jess.html
@@ -19,7 +19,7 @@
 	<link rel="alternate"
           href="android-app://es.maydev.jess/jessapp/lessons?lessonUrl=https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw" />
 
-    <meta property="og:image" itemprop="image" content="jess/ic_launcher.png"/>
+    <meta property="og:image" itemprop="image" content="http://fmaylinch.github.io/jess/ic_launcher.png"/>
 
 </head>
 
