Add thumbnail schema

--- a/jess.html
+++ b/jess.html
@@ -25,6 +25,11 @@
 
 <body>
 
+	<link itemprop="thumbnailUrl" href="http://fmaylinch.github.io/jess/ic_launcher.png"> 
+	<span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> 
+			<link itemprop="url" href="http://fmaylinch.github.io/jess/ic_launcher.png"> 
+	</span>
+
 	<div class="main">
 
 		<nav>
