--- a/jess.html
+++ b/jess.html
@@ -19,16 +19,12 @@
 	<link rel="alternate"
           href="android-app://es.maydev.jess/jessapp/lessons?lessonUrl=https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw" />
 
-    <meta property="og:image" itemprop="image" content="http://fmaylinch.github.io/jess/ic_launcher.png"/>
+    <meta property="og:image" content="http://fmaylinch.github.io/jess/ic_launcher.png" />
+    <meta itemprop="image" content="http://fmaylinch.github.io/jess/ic_launcher.png">
 
 </head>
 
 <body>
-
-	<link itemprop="thumbnailUrl" href="http://fmaylinch.github.io/jess/ic_launcher.png"> 
-	<span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> 
-			<link itemprop="url" href="http://fmaylinch.github.io/jess/ic_launcher.png"> 
-	</span>
 
 	<div class="main">
 
