Add description and color metas

--- a/jess.html
+++ b/jess.html
@@ -19,6 +19,15 @@
 	<link rel="alternate"
           href="android-app://es.maydev.jess/jessapp/lessons?lessonUrl=https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw" />
 
+
+    <meta name="theme-color" content="#3E5A73"> <!-- Chrome, Firefox OS and Opera -->
+    <meta name="msapplication-navbutton-color" content="#3E5A73"> <!-- Windows Phone -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#3E5A73"> <!-- iOS Safari -->
+
+    <meta itemprop="name" content="Jess app. Learn JavaScript on the go!">
+    <meta itemprop="description" content="Download free JavaScript tutorials and learn on your phone, anytime, anywhere you wish!">
+    <meta name="Description" content="Download free JavaScript tutorials and learn on your phone, anytime, anywhere you wish!">
+    
     <meta property="og:image" content="http://fmaylinch.github.io/jess/ic_launcher.png" />
     <meta itemprop="image" content="http://fmaylinch.github.io/jess/ic_launcher.png">
 
