Add script metas

--- a/jess.html
+++ b/jess.html
@@ -27,7 +27,7 @@
     <meta itemprop="name" content="Jess app. Learn JavaScript on the go!">
     <meta itemprop="description" content="Download free JavaScript tutorials and learn on your phone, anytime, anywhere you wish!">
     <meta name="Description" content="Download free JavaScript tutorials and learn on your phone, anytime, anywhere you wish!">
-    
+
     <meta property="og:image" content="http://fmaylinch.github.io/jess/ic_launcher.png" />
     <meta itemprop="image" content="http://fmaylinch.github.io/jess/ic_launcher.png">
 
@@ -97,6 +97,23 @@
 		</div>
 
 	</div>
+
+	<script type="application/ld+json">
+	{
+	  "@context": "http://schema.org",
+	  "@type": "WebSite",
+	  "url": "http://fmaylinch.github.io/jess.html"
+	  }
+	}
+	</script>
+	<script type="application/ld+json">
+	{ "@context" : "http://schema.org",
+	  "@type" : "Organization",
+	  "name" : "Ferran Maylinch",
+	  "url" : "http://fmaylinch.github.io/jess.html",
+	  "logo" : "http://fmaylinch.github.io/jess/ic_launcher.png"
+	}
+	</script>
 
 </body>
 </html>
