--- a/jess.html
+++ b/jess.html
@@ -37,6 +37,11 @@
 
 	<div class="main">
 
+		<link itemprop="thumbnailUrl" href="http://fmaylinch.github.io/jess/ic_launcher.png"> 
+		<span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> 
+		  <link itemprop="url" href="http://fmaylinch.github.io/jess/ic_launcher.png"> 
+		</span>
+
 		<nav>
 			<img src="jess/ic_launcher.png" alt="Jess app">	
 			<span>Jess app</span>
