Try meta image jpg

--- a/jess.html
+++ b/jess.html
@@ -28,8 +28,8 @@
     <meta itemprop="description" content="Download free JavaScript tutorials and learn on your phone, anytime, anywhere you wish!">
     <meta name="Description" content="Download free JavaScript tutorials and learn on your phone, anytime, anywhere you wish!">
 
-    <meta property="og:image" content="http://fmaylinch.github.io/jess/ic_launcher.png" />
-    <meta itemprop="image" content="http://fmaylinch.github.io/jess/ic_launcher.png">
+    <meta property="og:image" content="http://fmaylinch.github.io/jess/ic_launcher.jpg" />
+    <meta itemprop="image" content="http://fmaylinch.github.io/jess/ic_launcher.jpg">
 
 </head>
 
@@ -37,9 +37,9 @@
 
 	<div class="main">
 
-		<link itemprop="thumbnailUrl" href="http://fmaylinch.github.io/jess/ic_launcher.png"> 
+		<link itemprop="thumbnailUrl" href="http://fmaylinch.github.io/jess/ic_launcher.jpg"> 
 		<span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> 
-		  <link itemprop="url" href="http://fmaylinch.github.io/jess/ic_launcher.png"> 
+		  <link itemprop="url" href="http://fmaylinch.github.io/jess/ic_launcher.jpg"> 
 		</span>
 
 		<nav>
@@ -116,7 +116,7 @@
 	  "@type" : "Organization",
 	  "name" : "Ferran Maylinch",
 	  "url" : "http://fmaylinch.github.io/jess.html",
-	  "logo" : "http://fmaylinch.github.io/jess/ic_launcher.png"
+	  "logo" : "http://fmaylinch.github.io/jess/ic_launcher.jpg"
 	}
 	</script>
 
