filter-html test and more

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
 	<!-- jQuery (not minified) -->
 	<script src="js/jquery-2.2.1.js"></script>
+
+	<!-- Browser header color -->
+    <meta name="theme-color" content="#3E5A73"> <!-- Chrome, Firefox OS and Opera -->
+    <meta name="msapplication-navbutton-color" content="#3E5A73"> <!-- Windows Phone -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#3E5A73"> <!-- iOS Safari -->
+
 </head>
 
 <body>
