Update Jess to 1.3

--- a/jess.html
+++ b/jess.html
@@ -50,21 +50,29 @@
 		<div class="content">
 
 			<section>
+				<div class="section-content">
+					<p>
+						With Jess app you can download JavaScript lessons and learn on the go!
+					</p>
+				</div>
+			</section>
+
+			<section>
 
 				<h3>Students: how to use it</h3>
 
 				<div class="section-content">
 
 					<p>
-						Get the latest <a href="jess/jess-1.2.apk">Jess 1.2</a>.
+						Get the latest <a href="jess/jess-1.3.apk">Jess 1.3</a>.
 
 						<br><br>
 
-						After installing the app, click <a href="jessapp://lessons?lessonUrl=https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw">open sample lesson</a> from your mobile phone.
+						<a href="jessapp://lessons?lessonUrl=https://gist.github.com/fmaylinch/a15d559790ff3b497b7fa5595837a15c/raw">Open this lesson</a> from your mobile phone.
 
 						<br><br>
 
-						At the moment there's only that little sample lesson. I'm working on more content. Stay tuned!
+						The lesson is not finished yet. Stay tuned for updates and more lessons!
 
 					</p>
 
