--- a/jess.html
+++ b/jess.html
@@ -64,7 +64,7 @@
 				<div class="section-content">
 
 					<p>
-						Get the latest <a href="jess/jess-1.3.apk">Jess 1.3</a>.
+						Get the latest <a href="jess/jess-1.4.apk">Jess 1.4</a>.
 
 						<br><br>
 
@@ -72,7 +72,7 @@
 
 						<br><br>
 
-						The lesson is not finished yet. Stay tuned for updates and more lessons!
+						The lesson is not complete yet. Stay tuned for updates and more lessons!
 
 					</p>
 
@@ -91,14 +91,14 @@
 
 						<br><br>
 
-						Look at the <a href="https://gist.github.com/fmaylinch/8e49ccad29998c08c733">sample lesson source</a>.
+						Look at the <a href="https://gist.github.com/fmaylinch/a15d559790ff3b497b7fa5595837a15c">sample lesson source</a>.
 
 						<br><br>
 
 						You can paste the a link to the YAML file in the app. For example, this is the link to the sample lesson "raw" source:
 
 						<div class="code">
-							https://gist.github.com/fmaylinch/8e49ccad29998c08c733/raw
+							https://gist.github.com/fmaylinch/a15d559790ff3b497b7fa5595837a15c/raw
 						</div>
 
 					</p>
