Finish lesson and update jess to 1.5

--- a/jess.html
+++ b/jess.html
@@ -64,15 +64,15 @@
 				<div class="section-content">
 
 					<p>
-						Get the latest <a href="jess/jess-1.4.apk">Jess 1.4</a>.
+						Get the latest <a href="jess/jess-1.5.apk">Jess 1.5 (Android)</a>.
 
 						<br><br>
 
-						<a href="jessapp://lessons?lessonUrl=https://gist.github.com/fmaylinch/a15d559790ff3b497b7fa5595837a15c/raw">Open this lesson</a> from your mobile phone.
+						<a href="jessapp://lessons?lessonUrl=https://gist.github.com/fmaylinch/a15d559790ff3b497b7fa5595837a15c/raw">Open the intro lesson</a> from your mobile phone.
 
 						<br><br>
 
-						The lesson is not complete yet. Stay tuned for updates and more lessons!
+						Stay tuned for updates and more lessons!
 
 					</p>
 
@@ -91,11 +91,11 @@
 
 						<br><br>
 
-						Look at the <a href="https://gist.github.com/fmaylinch/a15d559790ff3b497b7fa5595837a15c">sample lesson source</a>.
+						Look at the <a href="https://gist.github.com/fmaylinch/a15d559790ff3b497b7fa5595837a15c">intro lesson source</a>.
 
 						<br><br>
 
-						You can paste the a link to the YAML file in the app. For example, this is the link to the sample lesson "raw" source:
+						You can paste the a link to the YAML file in the app. For example, this is the link to the intro lesson "raw" source:
 
 						<div class="code">
 							https://gist.github.com/fmaylinch/a15d559790ff3b497b7fa5595837a15c/raw
