Link HTML tutorial from main page

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
 						<li><a href="https://github.com/fmaylinch/LayoutHelperApp">LayoutHelperApp</a> : App and helper classes to code iOS layouts</li>
 
-						<li>
-							<a href="https://gist.github.com/fmaylinch/4a708abcdb42bf2330e5"> Code cheat sheet</a> : Comparison between some languages
-						</li>
+						<li><a href="https://gist.github.com/fmaylinch/4a708abcdb42bf2330e5"> Code cheat sheet</a> : Comparison between some languages</li>
+                      
+                        <li><a href="html-tutorial/index.html">HTML/CSS Tutorial</a> : Quick and painless introduction to HTML and CSS</li>
 
 						<li><a href="jess.html">Jess app</a> : JavaScript tutorials on the go!</li>
 
