--- a/html-tutorial/index.html
+++ b/html-tutorial/index.html
@@ -369,7 +369,7 @@
     </p>
     <p>
       The <code>img</code> element has <code>display:inline-block</code>, so it only takes the width of the image.
-      That's why the second image is displayed next to the first one and not below.
+      That's why the second image is displayed next to the first one and not below (unless you're reading this in a cell phone).
     </p>
 
     <p>
