--- a/room-cleaner/index.html
+++ b/room-cleaner/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Your HTML page</title>
+  <title>Room cleaner JS</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
