Room cleaner - success message

--- a/room-cleaner/index.html
+++ b/room-cleaner/index.html
@@ -25,6 +25,7 @@
     
     <div id="game-container">
       <div id="rows-container"></div>
+      <div id="success-message" class="alert alert-success" role="alert"><strong>Well done!</strong> Room is completely clean!</div>
     </div>
     
     <div class="buttons">
