Room cleaner - animate cleaning tile with jQuery UI

--- a/room-cleaner/index.html
+++ b/room-cleaner/index.html
@@ -64,6 +64,9 @@ if (robot.isRoomClean()) {
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
   
+  <!-- jQuery UI -->
+  <script src="jquery-ui-1.11.4.full/jquery-ui.js"></script>
+  
   <!-- CodeMirror -->
   <script src="code-mirror/codemirror.js"></script>
   <script src="code-mirror/javascript.js"></script>
