Use Github releases for Jess APK

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="section-content">
 					<ul>
 
-						<li><a href="jess.html">Jess app</a> : JavaScript tutorials on the go!</li>
+						<li><a href="jess.html">Jess app (Android)</a> : JavaScript tutorials on the go!</li>
 						
 						<li><a target="_blank" href="room-cleaner/index.html">Room Cleaner JS</a> : A JavaScript game with code to <em>clean</em>!</li>
 
