--- a/jess.html
+++ b/jess.html
@@ -64,7 +64,7 @@
 				<div class="section-content">
 
 					<p>
-						Get the latest <a href="jess/jess-1.5.apk">Jess 1.5 (Android)</a>.
+						Get the latest <a href="https://github.com/fmaylinch/fmaylinch.github.io/releases/download/1.5/jess-1.5.apk">Jess 1.5 (Android)</a>.
 
 						<br><br>
 
