Room cleaner - warning when room not clean

--- a/room-cleaner/index.html
+++ b/room-cleaner/index.html
@@ -20,13 +20,15 @@
 <body>
 
   <h1>Room cleaner JS</h1>
+
+  <div id="success-message" class="alert alert-success" role="alert"></div>
+  <div id="warning-message" class="alert alert-warning" role="alert"></div>
+  <div id="error-message" class="alert alert-danger" role="alert"></div>
   
   <div class="main">
-    
+
     <div id="game-container">
       <div id="rows-container"></div>
-      <div id="success-message" class="alert alert-success" role="alert"></div>
-      <div id="error-message" class="alert alert-danger" role="alert"></div>
     </div>
     
     <div class="buttons">
