Room cleaner - game speed option

--- a/room-cleaner/index.html
+++ b/room-cleaner/index.html
@@ -34,6 +34,12 @@
     <div class="buttons">
       <button id="run" class="btn btn-success">RUN IN RANDOM ROOM</button>
       <select id="level" class="form-control"></select>
+      <select id="speed" class="form-control">
+        <option value="0.5">Slow speed</option>
+        <option value="1" selected>Normal speed</option>
+        <option value="2">x2 speed</option>
+        <option value="4">x4 speed</option>
+      </select>
       <button id="test" class="btn btn-primary">Test Code</button>
       <button id="reset" class="btn btn-danger">Reset Room</button>
     </div>
