Room cleaner - little visual changes

--- a/room-cleaner/index.html
+++ b/room-cleaner/index.html
@@ -32,7 +32,7 @@
     </div>
     
     <div class="buttons">
-      <button id="run" class="btn btn-success">RUN IN RANDOM ROOM</button>
+      <button id="run" class="btn btn-success">RUN IN NEW ROOM</button>
       <select id="level" class="form-control"></select>
       <select id="speed" class="form-control">
         <option value="0.5">Slow speed</option>
