HTML Tutorial - minor visual changes

--- a/html-tutorial/index.html
+++ b/html-tutorial/index.html
@@ -18,6 +18,9 @@
   <link href="prismjs/prism.css" rel="stylesheet" />
   <script src="prismjs/prism.js"></script>
   
+  <!-- Fonts -->
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+  
   <!-- our css -->
   <script src="main.js"></script>
   
@@ -842,7 +845,7 @@
       <ul>
         <li>More elements and styles:</li>
         <ul>
-          <li>Styling text: spans (strong, em, ...), <a href="https://google-webfonts-helper.herokuapp.com/fonts/">Google fonts</a>, <a href="http://fontawesome.io/">FontAwesome</a></li>
+          <li>Styling text: spans (strong, em, ...), <a href="https://www.google.com/fonts">Google fonts</a>, <a href="http://fontawesome.io/">FontAwesome</a></li>
           <li>Lists (ul, ol, li) and tables (table, tr, td)</li>
         </ul>
         <li>Mastering layouts:</li>
