Starting code tutorial / reuse prismjs

--- a/html-tutorial/index.html
+++ b/html-tutorial/index.html
@@ -15,15 +15,14 @@
   <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
   
   <!-- prism syntax highlighter -->
-  <link href="prismjs/prism.css" rel="stylesheet" />
-  <script src="prismjs/prism.js"></script>
+  <link href="../prismjs/prism-dark.css" rel="stylesheet" />
+  <script src="../prismjs/prism.js"></script>
+  <script src="../prismjs/prism-init.js"></script>
   
   <!-- Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   
   <!-- our css -->
-  <script src="main.js"></script>
-  
   <link rel="stylesheet" href="main.css">
 
 </head>
