Layout section - nav bar options soon

--- a/html-tutorial/index.html
+++ b/html-tutorial/index.html
@@ -995,7 +995,11 @@
 
     <iframe src="layout/v6-flexbox-center/index.html" width="100%" height="600"></iframe>
 
-    </section>
+    <h3>10.7 Navigation menu options</h3>
+    
+    <div class="soon">Soon...</div>
+
+  </section>
   
   <section id="X">
 
