Code-then little change

--- a/code-then/index.html
+++ b/code-then/index.html
@@ -31,7 +31,7 @@
   </header>
 
   <div class="content-header">
-    We teach you what you need to know about <code>code, then</code> what comes next is up to you. The possiblities are endless.
+    We teach you what you need to know about <code>code</code>, <code>then</code> what comes next is up to you. The possiblities are endless.
   </div>
         
   <main>
