Code-then little changes in philosophy

--- a/code-then/index.html
+++ b/code-then/index.html
@@ -44,8 +44,8 @@
       <li><strong>Two classes per week</strong> so you can better assimilate what you learn.</li>
       <li>Excercises so you can <strong>practice at home</strong>, with support from us when necessary.</li>
       <li><strong>Up-to-date technologies</strong> that are in demand: git, flexbox, sass, angular, Java 8, reactive streams, SQL, No SQL, ...</li>
-      <li>Comparison of different languages (Java, JavaScript, Ruby, Python, Scala) to better understand the core concepts of coding.</li>
-      <li><strong>Care about what you learn</strong>.</li>
+      <li>Comparison between <strong>different languages</strong> (Java, JavaScript, Ruby, Python, Scala) to better understand the core concepts of coding.</li>
+      <li><strong>We care about what you learn</strong>.</li>
     </ul>
     
     <h1>Course contents<span class="contents-cursor typed-cursor">_</span></h1>
