fix typos (thanks Montse!)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </header>
 
   <div class="content-header">
-    We teach you what you need to know about <code>code</code>, <code>then</code> what comes next is up to you. The possiblities are endless.
+    We teach you what you need to know about <code>code</code>, <code>then</code> what comes next is up to you. The possibilities are endless.
   </div>
         
   <main>
@@ -44,7 +44,7 @@
       <li>Go into detail about programming to achieve a <strong>strong knowledge of core concepts</strong>.</li>
       <li>Stress the <strong>importance of good code</strong>: indentation, meaningful names, documentation, avoid repetition, tests, ...</li>
       <li><strong>Two classes per week</strong> so you can better assimilate what you learn.</li>
-      <li>Excercises so you can <strong>practice at home</strong>, with support from us when necessary.</li>
+      <li>Exercises to <strong>practice at home</strong>, with support from us when necessary.</li>
       <li><strong>Up-to-date technologies</strong> that are in demand: git, flexbox, sass, angular, Java 8, reactive streams, SQL, No SQL, ...</li>
       <li>Comparison between <strong>different languages</strong> (Java, JavaScript, Ruby, Python, Scala) to better understand the core concepts of coding.</li>
       <li><strong>We care about what you learn</strong>.</li>
