--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
     </ol>
     
-    <p class="milestone"><i class="fa fa-flag-o" aria-hidden="true"></i>&nbsp; Here you now the most important concepts of programming and you can create simple programs</p>
+    <p class="milestone"><i class="fa fa-flag-o" aria-hidden="true"></i>&nbsp; Here you know the most important concepts of programming (really) and you can create simple programs</p>
     
     <span class="section-title">Classes and objects</span>
     <ol>
