--- a/es/index.html
+++ b/es/index.html
@@ -23,7 +23,7 @@
   <script src="https://use.fontawesome.com/486de957b6.js"></script>
   
   <!-- our css -->
-  <link rel="stylesheet" href="http://codethen.com/code-then/main.css">
+  <link rel="stylesheet" href="../code-then/main.css">
 
 </head>
 
@@ -47,6 +47,8 @@
         
   <main>
   
+    <a href="../index.html"><span class="flag"><img src="../code-then/flags/uk.png" alt="English"> <span class="flag-text">English</span></span></a>
+
     <h1>Filosofía<span class="contents-cursor typed-cursor">_</span></h1>
     
     <ul>
@@ -378,7 +380,7 @@
   <!-- http://www.mattboldt.com/demos/typed-js/ -->
   <script src="http://codethen.com/code-then/typed.min.js"></script>
   <!-- our js -->
-  <script src="http://codethen.com/code-then/main.js"></script>
+  <script src="../code-then/main.js"></script>
 
 </body>
 
