--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         
   <main>
   
+    <a href="es/index.html"><span class="flag"><img src="code-then/flags/es.png" alt="Spanish"> <span class="flag-text">Español</span></span></a>
+
     <h1>Philosophy<span class="contents-cursor typed-cursor">_</span></h1>
     
     <ul>
