Added email icon for contact

--- a/es/index.html
+++ b/es/index.html
@@ -374,7 +374,7 @@
       Además, disfrutarás de la programación muchísimo más.
     </p>
 
-    <h1>Contacto<span class="contents-cursor typed-cursor">_</span></h1>
+    <h1><img class="title-icon" src="../code-then/icons/email.svg"> Contacto<span class="contents-cursor typed-cursor">_</span></h1>
     
     <p>¿Te interesa? ¿Tienes alguna pregunta? Escríbeme a <a href="mailto:codethen@gmail.com?subject=About Code Then">codethen@gmail.com</a>!</p>
 
