--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       you need to reach your goals. Moveover, you will enjoy programming much more.
     </p>
 
-    <h1>Contact<span class="contents-cursor typed-cursor">_</span></h1>
+    <h1><img class="title-icon" src="code-then/icons/email.svg"> Contact<span class="contents-cursor typed-cursor">_</span></h1>
     
     <p>Interested? Any question? Write me to <a href="mailto:codethen@gmail.com?subject=About Code Then">codethen@gmail.com</a>!</p>
 
