Fix more typos (thanks Monstse)

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
  
  
     <ul>
-      <li>I'm <a href="https://www.linkedin.com/in/ferranmaylinch">Ferran Maylinch</a>.</li>
+      <li>My name is <a href="https://www.linkedin.com/in/ferranmaylinch">Ferran Maylinch</a>.</li>
       <li>Back-end, front-end and mobile developer for +10 years, currently at <a href="https://www.gymforless.com">GymForLess</a>.</li>
       <li>I'm working as a teacher at <a href="https://www.ironhack.com">Ironhack</a> and <a href="http://www.ubiqum.com">Ubiqum</a>.</li>
       <li>Studied at <a href="http://www.upc.edu">UPC</a>, where I also started teaching.</li>
@@ -372,7 +372,7 @@
       solid foundation by learning the core programming concepts.
       With that knowledge in your toolbelt, you will be better
       prepared to learn any languages, tools or frameworks
-      you need to reach your goals. Moveover, you will enjoy programming much more.
+      you need to reach your goals. Moreover, you will enjoy programming much more.
     </p>
 
     <h1><img class="title-icon" src="code-then/icons/email.svg"> Contact<span class="contents-cursor typed-cursor">_</span></h1>
