Process code-then SASS file

--- a/es/index.html
+++ b/es/index.html
@@ -23,7 +23,7 @@
   <script src="https://use.fontawesome.com/486de957b6.js"></script>
   
   <!-- our css -->
-  <link rel="stylesheet" href="../code-then/main.css">
+  <link rel="stylesheet" href="../css/generated/code-then.css">
 
 </head>
 
@@ -281,6 +281,7 @@
         <span class="clickable">Conceptos avanzados de programación</span>
         <ul>
           <li>Patrones de diseño (e.g. observador, plantilla)</li>
+          <li>Familias de clases (DTO, BO, útil)</li>
           <li>TDD (desarrollo dirigido por tests)</li>
           <li>Hilos</li>
           <li>Expresiones regulares</li>
