--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script src="https://use.fontawesome.com/486de957b6.js"></script>
   
   <!-- our css -->
-  <link rel="stylesheet" href="code-then/main.css">
+  <link rel="stylesheet" href="css/generated/code-then.css">
 
 </head>
 
@@ -63,7 +63,7 @@
       <li>We'll go into detail about programming to achieve a <strong>strong knowledge of core concepts</strong>.</li>
       <li>We'll see the <strong>importance of good code</strong>: indentation, meaningful names, documentation, avoid repetition, tests, ...</li>
       <li><strong>Two classes of 2h per week</strong> so you have time to assimilate the course and combine it with work.</li>
-      <li><strong>Small class group </strong>(~5 students) to better atttend your needs.</li>
+      <li><strong>Small class group </strong>(~5 students) to better attend your needs.</li>
       <li>Exercises to <strong>practice at home</strong>, with my help when you need it.</li>
       <li><strong>Up-to-date technologies</strong> that are in demand: git, angular, sass, flexbox, Java 8, reactive streams, SQL, No-SQL, ...</li>
       <li>Comparison between <strong>different languages</strong> (Java, JavaScript, Ruby, Python, Scala) to better understand the core concepts of coding.</li>
@@ -282,6 +282,7 @@
         <span class="clickable">Advanced programming concepts</span>
         <ul>
           <li>Design patters (e.g. observer, template)</li>
+          <li>Kinds of classes (DTO, BO, util)</li>
           <li>TDD</li>
           <li>Threads</li>
           <li>Regular expressions</li>
