--- a/es/index.html
+++ b/es/index.html
@@ -90,8 +90,8 @@
     </p>
     
     <p>
-      <button id="expand"><i class="fa fa-expand" aria-hidden="true"></i> Expandir</button>
-      <button id="collapse"><i class="fa fa-compress" aria-hidden="true"></i> Contraer</button>
+      <button id="expand"><i class="fa fa-caret-down" aria-hidden="true"></i> Expandir todo</button>
+      <button id="collapse"><i class="fa fa-caret-up" aria-hidden="true"></i> Contraer todo</button>
     </p>
     
     <span class="section-title">Introducción</span>
