--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     </p>
     
     <p>
-      <button id="expand"><i class="fa fa-expand" aria-hidden="true"></i> Expand</button>
-      <button id="collapse"><i class="fa fa-compress" aria-hidden="true"></i> Collapse</button>
+      <button id="expand"><i class="fa fa-caret-down" aria-hidden="true"></i> Expand all</button>
+      <button id="collapse"><i class="fa fa-caret-up" aria-hidden="true"></i> Collapse all</button>
     </p>
     
     <span class="section-title">Intro</span>
