Include slides and simplify MyProgram

--- a/files/index.html
+++ b/files/index.html
@@ -24,7 +24,9 @@
 
     <main>
         
-        <a href="samples/MyProgram.java">MyProgram.java</a> : you can use this as a sample program to create yours.
+        <p><a href="https://drive.google.com/drive/u/0/folders/0Bwn8WvJIqKkAQTh5eEczRUVNaW8">Slides</a> explaining some concepts.</p>
+
+        <p><a href="samples/MyProgram.java">MyProgram.java</a> : you can use this as a sample program to create yours.</p>
 
     </main>
 
