--- a/files/index.html
+++ b/files/index.html
@@ -28,6 +28,8 @@
 
         <p><a href="samples/MyProgram.java">MyProgram.java</a> : you can use this as a sample program to create yours.</p>
 
+        <p><a href="samples/ExpressionsSample.java">ExpressionsSample.java</a> : sample with expressions and the <code>if</code> statement.</p>
+
     </main>
 
 </body>
