--- a/files/index.html
+++ b/files/index.html
@@ -30,6 +30,8 @@
 
         <p><a href="samples/ExpressionsSample.java">ExpressionsSample.java</a> : sample with expressions and the <code>if</code> statement.</p>
 
+        <p><a href="samples/LoopsSample.java">LoopsSample.java</a> : sample with loops: <code>while</code> and <code>for</code>.</p>
+
     </main>
 
 </body>
