Add exercises and link to source folder

--- a/files/index.html
+++ b/files/index.html
@@ -26,11 +26,9 @@
         
         <p><a href="https://drive.google.com/drive/u/0/folders/0Bwn8WvJIqKkAQTh5eEczRUVNaW8">Slides</a> explaining some concepts.</p>
 
-        <p><a href="samples/MyProgram.java">MyProgram.java</a> : you can use this as a sample program to create yours.</p>
+        <p><a href="java/samples/JavaSample.java">JavaSample.java</a> : you can use this as a sample program to create yours.</p>
 
-        <p><a href="samples/ExpressionsSample.java">ExpressionsSample.java</a> : sample with expressions and the <code>if</code> statement.</p>
-
-        <p><a href="samples/LoopsSample.java">LoopsSample.java</a> : sample with loops: <code>while</code> and <code>for</code>.</p>
+        <p><a href="https://github.com/fmaylinch/fmaylinch.github.io/tree/master/files/java">Java files</a> : more samples and exercises.</p>
 
     </main>
 
