Try white (en) and purple (es) share icons

--- a/es/index.html
+++ b/es/index.html
@@ -12,8 +12,8 @@
   <meta itemprop="description" content="Aprende a programar, las posibilidades son infinitas.">
   <meta name="Description" content="Aprende a programar, las posibilidades son infinitas.">
   <!-- Image -->
-  <meta property="og:image" content="http://codethen.com/code-then/code-then.jpg" />
-  <meta itemprop="image" content="http://codethen.com/code-then/code-then.jpg">
+  <meta property="og:image" content="http://codethen.com/code-then/code-then-purple.jpg" />
+  <meta itemprop="image" content="http://codethen.com/code-then/code-then-purple.jpg">
 
   <!-- normalize css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
