--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta itemprop="description" content="Learn to code, then the possibilities are endless.">
   <meta name="Description" content="Learn to code, then the possibilities are endless.">
   <!-- Image -->
-  <meta property="og:image" content="http://codethen.com/code-then/code-then.jpg" />
-  <meta itemprop="image" content="http://codethen.com/code-then/code-then.jpg">
+  <meta property="og:image" content="http://codethen.com/code-then/code-then-white.jpg" />
+  <meta itemprop="image" content="http://codethen.com/code-then/code-then-white.jpg">
 
   <!-- normalize css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
