Mention logic operators in content

--- a/es/index.html
+++ b/es/index.html
@@ -145,6 +145,7 @@
           <li>Definición, tipo, valor</li>
           <li>Operadores matemáticos: <code>+ - * / %</code></li>
           <li>Operadores de comparación: <code>== != &lt; &gt; &lt;= &gt;=</code></li>
+          <li>Operadores lógicos: <code>! &amp;&amp; ||</code></li>
           <li>Abreviaciones: <code>+= -= *= /=</code></li>
         </ul>
       </li>
