--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
           <li>Definition, type, value</li>
           <li>Math operators: <code>+ - * / %</code></li>
           <li>Comparison operators: <code>== != &lt; &gt; &lt;= &gt;=</code></li>
+          <li>Logic operators: <code>! &amp;&amp; ||</code></li>
           <li>Shortcuts: <code>+= -= *= /=</code></li>
         </ul>
       </li>
