--- a/files/index.html
+++ b/files/index.html
@@ -26,9 +26,9 @@
         
         <p><a href="https://drive.google.com/drive/u/0/folders/0Bwn8WvJIqKkAQTh5eEczRUVNaW8">Slides</a> explaining some concepts.</p>
 
-        <p><a href="java/samples/JavaSample.java">JavaSample.java</a> : you can use this as a sample program to create yours.</p>
+        <p><a href="https://github.com/fmaylinch/codethen/tree/master/src/main/java/samples/JavaSample.java">JavaSample.java</a> : you can use this as a sample program to create yours.</p>
 
-        <p><a href="https://github.com/fmaylinch/fmaylinch.github.io/tree/master/files/java">Java files</a> : more samples and exercises.</p>
+        <p><a href="https://github.com/fmaylinch/codethen/tree/master/src/main/java">Java files</a> : more samples and exercises.</p>
 
     </main>
 
