--- a/files/index.html
+++ b/files/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Support Files</title>
 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- normalize css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
 
