Little text addition

--- a/files/html/examples/index.html
+++ b/files/html/examples/index.html
@@ -21,7 +21,7 @@
     <h1>HTML, CSS and JavaScript</h1>
 
     <p><a href="example1/index.html">Example 1</a>: basic examples using vanilla JS and jQuery</p>
-    <p><a href="example2/index.html">Example 2</a></p>
+    <p><a href="example2/index.html">Example 2</a>: more advanced examples using JS and jQuery</p>
 
   </body>
 </html>
