--- a/files/index.html
+++ b/files/index.html
@@ -33,7 +33,7 @@
 
         <p><a href="https://github.com/fmaylinch/codethen/tree/master/src/main/java">Java files</a> : more samples and exercises.</p>
 
-        <p><a href="http://codethen.com/files/html/examples/">HTML examples</a> : examples using hmtl, css, js, jquery (see <a href="https://github.com/fmaylinch/fmaylinch.github.io/tree/master/files/html/examples">Source code</a>).</p>
+        <p><a href="http://codethen.com/files/html/examples/">HTML examples</a> : examples using hmtl, css, js, jquery (see <a href="https://github.com/fmaylinch/fmaylinch.github.io/tree/master/files/html/examples">source code</a>).</p>
 
     </main>
 
